@@ -38,7 +38,7 @@ class TestCopies(unittest.TestCase):
         self.spline = utils.spl(self.lcs)
 
     def test_draw_run_sims(self):
-        # self.clear_sims()
+        self.clear_sims()
         pycs3.sim.draw.saveresiduals(self.lcs, self.spline)
         pycs3.sim.draw.multidraw(self.lcs, self.spline, n=10, npkl=1, simset="mocks", destpath=self.outpath,
                                  truetsr=8.0, tweakml=[utils.Atweakml, utils.Btweakml, utils.Ctweakml, utils.Dtweakml])
@@ -47,9 +47,9 @@ class TestCopies(unittest.TestCase):
         kwargs_optim_regdiff = {'pd': 2, 'covkernel': 'matern', 'pow': 1.5, 'amp': 1., 'scale': 200., 'errscale': 1.,
                                 'verbose': True, 'method': "weights"}
         success_dic_spline = pycs3.sim.run.multirun("mocks", self.lcs, utils.spl, kwargs_optim, optset="spl",destpath=self.outpath,
-                                                    tsrand=10.0, keepopt=True, use_test_seed=True)
+                                                    tsrand=10.0, keepopt=True, use_test_seed=True, ncpu=1)
         success_dic_regdiff = pycs3.sim.run.multirun("mocks", self.lcs, utils.regdiff, kwargs_optim_regdiff,destpath=self.outpath,
-                                                     optset="regdiff", tsrand=10.0, keepopt=True, use_test_seed=True)
+                                                     optset="regdiff", tsrand=10.0, keepopt=True, use_test_seed=True, ncpu=1)
         assert success_dic_spline['success'] is True
         assert success_dic_regdiff['success'] is True
 
